--- a/frontend-assesment/src/assets/components/navigation-link.css
+++ b/frontend-assesment/src/assets/components/navigation-link.css
@@ -1,22 +1,18 @@
 @layer components {
   .navigation-link {
-    @apply fixed text-black right-10 bottom-10;
+    @apply fixed right-1 bottom-1 text-[#42b883] font-bold tracking-widest;
+    animation: bounce 3s infinite;
   }
 
-  .arrow {
-    @apply fixed right-12 bottom-16 w-0 h-0 border-l-4 border-r-4 border-solid border-transparent border-t-8 border-black;
-    animation: move-arrow 1s infinite;
-  }
-}
-
-@keyframes move-arrow {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-10px);
-  }
-  60% {
-    transform: translateY(-5px);
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
   }
 }
