--- a/frontend-assesment/src/assets/style.css
+++ b/frontend-assesment/src/assets/style.css
@@ -4,6 +4,9 @@
 @import './components/hero-banner.css';
 @import './components/article-card.css';
 @import './components/navigation-link.css';
+@import './components/tab.css';
+@import './components/bonus-banana.css';
+@import './components/accordion.css';
 
 @tailwind base;
 @tailwind components;
