update reademe and link

--- a/frontend-assesment/src/assets/components/accordion.css
+++ b/frontend-assesment/src/assets/components/accordion.css
@@ -8,11 +8,11 @@
   }
 
   .accordion-title {
-    @apply font-bold;
+    @apply font-bold text-accent-color tracking-widest;
   }
 
   .accordion-icon {
-    @apply text-lg;
+    @apply text-lg text-accent-color;
   }
 
   .accordion-content {
